fix: CatRepository public Cat save , added check if file is empty